# python_rust_data_science_bench

./: .gitignore  LICENSE  README.md  benchmark.py  entropy.py  entropy_pure_python.py  entropy_python_data_science.py  entropy_rust.py  requirements.txt
rust_entropy/: Cargo.toml
rust_entropy/src/: lib.rs
